fix font align

--- a/resources/sass/classes/_info-panel.scss
+++ b/resources/sass/classes/_info-panel.scss
@@ -7,7 +7,7 @@
     }
 
     &__description {
-        margin-top: -3px;
+        margin-top: -7px;
         margin-bottom: 5px;
     }
 
